prod/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-multi-app
  namespace: prod
spec:

  selector:
    matchLabels:
      app: sample-multi-app

  template:
    metadata:
      labels:
        app: sample-multi-app

    spec:
      imagePullSecrets:
        - name: dockerhub-cred

      containers:
        - name: web
          image: it67070191/sample_multi_app:v1.2

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
