prod/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-multi-app
  namespace: prod
spec:
  selector:
    app: sample-multi-app
  ports:
    - port: 80
      targetPort: 8080
