prod/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-multi-app
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: ipa-prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-multi-app
                port:
                  number: 80
